wp-content/mu-plugins/covenant-core/src/scss/blocks/wrapper/_style.scss
.cpc-wrapper {
  @apply pt-8 pb-12;

  &.alignfull {
    @include full-width();
  }

  &.alignwide {
    @include wide-width();
  }

  &__wrapper {
    width: calc(100% - 4rem);
    margin: 0 auto;
    max-width: 1200px;

    & > p {
      @apply mb-4;
    }
  }

  &.bg-black,
  &.bg-primary,
  &.bg-primary-dark {
    @apply text-white;

    .wp-block-shortcode {
      @apply text-black;
    }
  }
}

